Finish content on gallery. Update mobile homepage spacing.

--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -3,24 +3,25 @@
 import { Image } from 'astro:assets';
 
 // Content
-import bigLiving from '../../assets/images/big-living.jpg';
-import stairs1 from '../../assets/images/stairs-1.jpg';
-import teak from '../../assets/images/teak.jpg';
-import kidsBed from '../../assets/images/kids-bed-wide.jpg';
-// import repairA from '../../assets/images/repair-before.png';
-// import repairB from '../../assets/images/repair-during.png';
 // import repairC from '../../assets/images/repair-after.png';
-import stockKitchen from '../../assets/images/kitchen-1.jpg';
-import closeUp from '../../assets/images/close-up.jpg';
 import addition1 from '../../assets/images/addition1.jpg';
-// import addition2 from '../../assets/images/addition2.jpg';
-import distressed from '../../assets/images/distressed-engineered.jpg';
-import medallion1a from '../../assets/images/medallion-1.jpg';
-// import medallion1b from '../../assets/images/medallion-1b.jpg';
-// import medallion2a from '../../assets/images/medallion-2a.jpg';
-import medallion2b from '../../assets/images/medallion-2b.jpg';
+import bigLiving from '../../assets/images/big-living.jpg';
 import books1 from '../../assets/images/books-1.jpg';
 import books2 from '../../assets/images/books-2.jpg';
+import closeUp from '../../assets/images/close-up.jpg';
+import distressed from '../../assets/images/distressed-engineered.jpg';
+import kidsBed from '../../assets/images/kids-bed-wide.jpg';
+import kitchen1 from '../../assets/images/kitchen1.jpg';
+import loft1 from '../../assets/images/loft-1.jpg';
+import loft2 from '../../assets/images/loft-2.jpg';
+import medallion1a from '../../assets/images/medallion-1.jpg';
+import medallion2b from '../../assets/images/medallion-2b.jpg';
+import resand1 from '../../assets/images/resand1.jpg';
+import resand2 from '../../assets/images/resand2.jpg';
+import stairs1 from '../../assets/images/stairs-1.jpg';
+import stairs2 from '../../assets/images/stairs-prefinish.jpg';
+import stockKitchen from '../../assets/images/kitchen-1.jpg';
+import teak from '../../assets/images/teak.jpg';
 ---
 
 <div class="mt-16 columns-1 gap-4 sm:columns-2 md:columns-3">
@@ -45,15 +46,21 @@ import books2 from '../../assets/images/books-2.jpg';
   <Image src={teak} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
   <Image src={stockKitchen} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
   <Image src={kidsBed} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={closeUp} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={books1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={books2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={kitchen1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
   <Image src={medallion2b} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={medallion1a} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
   <Image
     src={bigLiving}
     alt="Living room wood floors"
     width="500"
     class="mb-4 rounded-lg"
   />
+  <Image src={books1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={books2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={medallion1a} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={closeUp} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={loft1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={loft2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={resand1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={resand2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={stairs2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
 </div>
