--- a/src/components/content/HomeHero.astro
+++ b/src/components/content/HomeHero.astro
@@ -10,24 +10,20 @@ const optimizedBackgroundImage = await getImage({ src: kitchen, width: 1000 });
 
 <section
   class="container mx-auto mb-12 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-900"
-  style={`background-image: url('${optimizedBackgroundImage.src}')`}
->
+  style={`background-image: url('${optimizedBackgroundImage.src}')`}>
   <div class="mx-auto max-w-screen-xl px-4 py-10 text-center lg:px-20 lg:py-40">
     <h1
-      class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl"
-    >
+      class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl">
       Hardwood floors done right. Guaranteed.
     </h1>
     <p
-      class="mb-8 text-xl font-semibold text-black dark:text-stone-400 sm:px-16 lg:text-2xl xl:px-48"
-    >
+      class="mb-8 text-xl font-semibold text-black dark:text-stone-400 sm:px-16 lg:text-2xl xl:px-48">
       At Avalanche Hardwood Floors we focus on quality and trust. Give us a call
       for a free, no pressure estimate to help get you pointed in the right
       direction.
     </p>
     <div
-      class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16"
-    >
+      class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16">
       <Button
         text="Get a quote"
         classes="btn-primary"
