--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -4,29 +4,25 @@ import Button from '@components/ui/Button.astro';
 
 // Content
 import { Image, getImage } from 'astro:assets';
-import living from '../../assets/images/stairs-2.jpg';
+import living from '../../assets/images/nice-bedroom.jpg';
 ---
 
 <section
-  class="dark:bg-stone-80 container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay"
->
+  class="dark:bg-stone-80 container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay">
   <div class="block grid-cols-12 items-center px-8 md:px-16 xl:grid">
-    <div class="col-span-5 py-20">
+    <div class="col-span-5 py-10 lg:py-20">
       <h1
-        class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl"
-      >
+        class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl">
         Hardwood floors done right. Guaranteed.
       </h1>
       <p
-        class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl"
-      >
+        class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
         At Avalanche Hardwood Floors we focus on quality and trust. Give us a
         call for a free, no pressure estimate to help get you pointed in the
         right direction.
       </p>
       <div
-        class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16"
-      >
+        class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16">
         <Button
           text="Get a quote"
           classes="btn-primary"
@@ -40,7 +36,7 @@ import living from '../../assets/images/stairs-2.jpg';
       src={living}
       alt="Colorado Srings hardwood floor"
       width="1000"
-      class="col-span-7 scale-125 rounded-3xl max-sm:scale-150 xl:translate-x-40"
+      class="col-span-7 scale-125 rounded-3xl max-sm:mt-20 max-sm:scale-150 xl:translate-x-40"
     />
   </div>
 </section>
