--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -8,19 +8,16 @@ const today = new Date();
 ---
 
 <footer
-  class="container relative mx-auto mb-10 mt-10 overflow-hidden rounded-2xl bg-red-900 p-4 dark:mb-0 dark:bg-stone-900 md:p-8 lg:p-10 lg:pt-20"
->
+  class="container relative mx-auto mb-10 mt-10 overflow-hidden rounded-2xl bg-red-900 p-4 dark:mb-0 dark:bg-stone-900 md:p-8 lg:p-10 lg:pt-20">
   <div
     id="bg"
-    class="absolute inset-0 -bottom-40 left-auto top-auto z-0 stroke-red-800 dark:stroke-stone-800"
-  >
+    class="absolute inset-0 -bottom-40 left-auto top-auto z-0 stroke-red-800 dark:stroke-stone-800">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="640"
       height="944"
       viewBox="0 0 640 944"
-      fill="none"
-    >
+      fill="none">
       <g clip-path="url(#clip0_20_14025)">
         <path
           d="M362.245 0.000229527C455.485 535.279 113.669 929.157 24.1779 722.483C-47.0426 558.005 490.275 534.875 616.912 944.633"
@@ -44,8 +41,7 @@ const today = new Date();
       Fountain, Pueblo, and the entire front range.
     </p>
     <ul
-      class="mb-6 flex flex-wrap items-center justify-center gap-3 text-stone-200 dark:text-white"
-    >
+      class="mb-6 flex flex-wrap items-center justify-center gap-3 text-stone-200 dark:text-white">
       <li>
         <a
           href="/"
@@ -90,7 +86,28 @@ const today = new Date();
   </div>
 </footer>
 <p class="mb-3 text-center text-xs text-stone-500 dark:text-stone-500">
-  Built from scratch with &#9825; by <a
+  Built from scratch with <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="1em"
+    height="1em"
+    viewBox="0 0 24 24"
+    class="-mt-1 inline-block"
+    ><path
+      fill="none"
+      stroke="currentColor"
+      stroke-dasharray="30"
+      stroke-dashoffset="30"
+      stroke-linecap="round"
+      stroke-width="2"
+      d="M12 8C12 8 12 8 12.7578 7C13.6343 5.84335 14.9398 5 16.5 5C18.9853 5 21 7.01472 21 9.5C21 10.4251 20.7209 11.285 20.2422 12C19.435 13.206 12 21 12 21M12 8C12 8 12 8 11.2422 7C10.3657 5.84335 9.06021 5 7.5 5C5.01472 5 3 7.01472 3 9.5C3 10.4251 3.27914 11.285 3.75777 12C4.56504 13.206 12 21 12 21"
+      ><animate
+        fill="freeze"
+        repeatCount="indefinite"
+        attributeName="stroke-dashoffset"
+        dur="7s"
+        values="0;30;0;0;0;0;0;0;0"></animate></path
+    ></svg
+  > by <a
     href=`https://newvistadigital.com/?utm_source=${SITE_UTM_SOURCE}`
     target="_blank"
     class="underline transition-colors hover:text-black">New Vista Digital</a
