--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -9,7 +9,7 @@ import logoDark from '../../assets/images/logo-white.svg?raw';
 import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
 ---
 
-<div class="mb-12 bg-white dark:bg-stone-800">
+<div class="bg-white dark:bg-stone-800 md:mb-12">
   <Alert />
   <header class="container mx-auto items-center gap-5 p-5 lg:flex">
     <Astronav>
@@ -18,8 +18,7 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
           href="/"
           aria-label="homepage"
           class="inline-block h-auto align-middle"
-          data-navLink
-        >
+          data-navLink>
           <span class="inline-block h-8 w-auto pr-6 dark:hidden"
             ><Fragment set:html={logo} /></span
           >
@@ -33,8 +32,7 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
               class="ham hamRotate ham8"
               viewBox="0 0 100 100"
               width="40"
-              onclick="this.classList.toggle('active')"
-            >
+              onclick="this.classList.toggle('active')">
               <path
                 class="line top stroke-stone-800 dark:stroke-white"
                 d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"
