fix: overflow on mobile homepage

--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -8,7 +8,7 @@ import living from '../../assets/images/nice-bedroom.jpg';
 ---
 
 <section
-  class="dark:bg-stone-80 container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay">
+  class="dark:bg-stone-80 container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-800">
   <div class="block grid-cols-12 items-center px-8 md:px-16 xl:grid">
     <div class="col-span-5 py-10 lg:py-20">
       <h1
