--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -13,7 +13,7 @@ import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
     >
     <a
       href={SITE_PHONE_HREF}
-      class="mr-auto px-2 font-bold text-stone-950 hover:text-amber-700 dark:text-stone-300 max-sm:-mt-1.5 max-sm:ml-2 max-sm:rounded-lg max-sm:bg-yellow-500 max-sm:px-3 max-sm:py-1 max-sm:hover:bg-yellow-600 max-sm:hover:text-white"
+      class="mr-auto px-2 font-bold text-stone-950 hover:text-amber-700 max-sm:-mt-1.5 max-sm:ml-2 max-sm:rounded-lg max-sm:bg-yellow-500 max-sm:px-3 max-sm:py-1 max-sm:hover:bg-yellow-400 max-sm:hover:text-black sm:dark:text-stone-300 sm:dark:hover:text-white"
       >{SITE_PHONE}</a
     >
     <DarkModeToggle />
