--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,10 @@ import CTA from '../components/ui/CallToAction.astro';
 ---
 
 <BaseLayout>
-  <Hero />
-  <About />
-  <Services />
-  <CTA />
+  <div class="overflow-x-hidden">
+    <Hero />
+    <About />
+    <Services />
+    <CTA />
+  </div>
 </BaseLayout>
