feat: add sitemap and robots.txt plugins

--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -3,7 +3,7 @@
 import Button from '@components/ui/Button.astro';
 
 // Content
-import { Image, getImage } from 'astro:assets';
+import { Image } from 'astro:assets';
 import living from '../../assets/images/nice-bedroom.jpg';
 ---
 
