update preview image and add alt text

--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -33,34 +33,99 @@ import teak from '../../assets/images/teak.jpg';
   />
   <Image
     src={addition1}
-    alt="Repair during"
+    alt="Hardwood floor kitchen living room addition"
     width="500"
     class="mb-4 rounded-lg"
   />
   <Image
     src={distressed}
-    alt="Repair after"
+    alt="Distressed prefinished hardwood floors"
     width="500"
     class="mb-4 rounded-lg"
   />
-  <Image src={teak} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image
+    src={teak}
+    alt="Living room with teak prefinished hardwood floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
   <Image src={stockKitchen} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={kidsBed} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={kitchen1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={medallion2b} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image
+    src={kidsBed}
+    alt="Kids bedroom with engineered wide wood floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={kitchen1}
+    alt="Living room and kitchen with white oak floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={medallion2b}
+    alt="Custom hardwood floor medallion"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
   <Image
     src={bigLiving}
     alt="Living room wood floors"
     width="500"
     class="mb-4 rounded-lg"
   />
-  <Image src={books1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={books2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={medallion1a} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={closeUp} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={loft1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={loft2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={resand1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={resand2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
-  <Image src={stairs2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image
+    src={books1}
+    alt="Wide oak floors in living room"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={books2}
+    alt="Site finished white oak floors in living room"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={medallion1a}
+    alt="Entryway medallion"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={closeUp}
+    alt="close up of prefinished wood floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={loft1}
+    alt="Red oak floors in a hallway loft"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={loft2}
+    alt="red oak floors in a living room by fireplace"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={resand1}
+    alt="White oak floors resanded"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={resand2}
+    alt="Resanded white oak hardwood floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={stairs2}
+    alt="Prefinished hardwood spiral staircase in progress"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
 </div>
