--- a/src/components/site/BaseHead.astro
+++ b/src/components/site/BaseHead.astro
@@ -1,4 +1,7 @@
 ---
+// Components
+import GA4 from '../site/GoogleAnalytics.astro';
+
 // Built-in CSS styles.
 import '../../assets/tailwind.css';
 
@@ -19,11 +22,8 @@ const { title, description } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<!-- <meta name="generator" content={Astro.generator} /> -->
 
-<!-- Font preloads -->
-<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
+<GA4 />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
