fix: specify webp for homepage image

--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -36,6 +36,7 @@ import living from '../../assets/images/nice-bedroom.jpg';
       src={living}
       alt="Colorado Srings hardwood floor"
       width="1000"
+      format="webp"
       class="col-span-7 scale-125 rounded-3xl max-sm:mt-20 max-sm:scale-150 xl:translate-x-40"
     />
   </div>
