--- a/src/components/site/GoogleAnalytics.astro
+++ b/src/components/site/GoogleAnalytics.astro
@@ -2,7 +2,7 @@
 import { ANALYTICS_GA4 } from 'src/consts';
 ---
 
-<script type="text/partytown">
+<script is:inline type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag() {
     dataLayer.push(arguments);
