--- a/src/components/site/Header.astro
+++ b/src/components/site/Header.astro
@@ -1,12 +1,12 @@
 ---
 // Components
-import NavLink from '../../components/ui/NavLink.astro';
-import Alert from '../../components/ui/Alert.astro';
+import NavLink from "../../components/ui/NavLink.astro";
+import Alert from "../../components/ui/Alert.astro";
 
 // Content
-import logo from '../../assets/images/logo.svg?raw';
-import logoDark from '../../assets/images/logo-white.svg?raw';
-import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
+import logo from "../../assets/images/logo.svg?raw";
+import logoDark from "../../assets/images/logo-white.svg?raw";
+import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 ---
 
 <div class="bg-white dark:bg-stone-800 md:mb-12">
@@ -49,7 +49,7 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
         </div>
       </div>
       <MenuItems class="hidden lg:flex">
-        <ul class="flex flex-col items-end items-center lg:flex-row lg:gap-5">
+        <ul class="flex flex-col items-center lg:flex-row lg:gap-5">
           <li>
             <NavLink
               href="/"
@@ -83,8 +83,10 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
             >
           </li>
           <li>
-            <NavLink href="/contact" class="btn btn-primary w-max" data-navLink
-              >Get a quote</NavLink
+            <NavLink
+              href="/contact"
+              class="btn btn-primary w-max !text-white"
+              data-navLink>Get a quote</NavLink
             >
           </li>
         </ul>
@@ -95,11 +97,11 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar';
 
 <script>
   // Accessibility tool: add aria-current to current page nav links.
-  const navLinks = document.querySelectorAll('[data-navLink]');
+  const navLinks = document.querySelectorAll("[data-navLink]");
 
   navLinks.forEach((link) => {
-    if (link.getAttribute('href') === window.location.pathname) {
-      link.setAttribute('aria-current', 'page');
+    if (link.getAttribute("href") === window.location.pathname) {
+      link.setAttribute("aria-current", "page");
     }
   });
 </script>
