--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -29,7 +29,7 @@ import { SITE_PHONE, SITE_PHONE_HREF, SITE_UTM_SOURCE } from "src/consts";
       data-netlify-recaptcha="true"
       method="POST">
       <div>
-        <label class="hidden"><input name="your-phone" /></label>
+        <label class="hidden"><input name="your-phone" type="number" /></label>
         <label
           for="email"
           class="mb-2 block text-sm font-medium text-stone-900 dark:text-stone-300"
@@ -72,6 +72,7 @@ import { SITE_PHONE, SITE_PHONE_HREF, SITE_UTM_SOURCE } from "src/consts";
           class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-stone-300 bg-stone-50 p-2.5 text-sm text-stone-900 shadow-sm dark:border-stone-600 dark:bg-stone-700 dark:text-white dark:placeholder-stone-400"
           placeholder="Leave a comment..."></textarea>
       </div>
+      <div data-netlify-recaptcha="true"></div>
       <button type="submit" class="btn-primary">Send message</button>
     </form>
   </div>
