fix(html): wrap title tags in curly brackets to escape characters

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,12 +6,15 @@ import Footer from '../components/site/Footer.astro';
 
 // Data
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const { title = SITE_TITLE, description=SITE_DESCRIPTION } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead title={title} description={description} />
   </head>
   <body
     class="bg-stone-100 text-stone-900 transition-colors dark:bg-stone-900 dark:text-stone-100">
@@ -22,9 +25,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <main id="main-content" class="max-md:p-5">
       <slot>
         <h1>Under construction</h1>
-        <p>No content found just yet...</p>
-      </slot>
-    </main>
-    <Footer />
-  </body>
+        Header />
+        <main id="main-content" class="max-md:p-5">
+          <slot>
+            <h1>Under construction</h1>
+            Header />
+            <main id="main-content" class="max-md:p-5">
+              <slot>
+                <h1>Under construction</h1>
+                Header />
+                <main id="main-content" class="max-md:p-5">
+                  <slot>
+                    <h1>Under construction</h1>
+                    <p>No content found just yet...</p>
+                  </slot>
+                </main>
+                <Footer />
+              </slot>
+            </main>
+          </slot>
+        </main></slot
+      >
+    </main></body
+  >
 </html>
