--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Services from '../components/content/HomeServices2.astro';
 import CTA from '../components/ui/CallToAction.astro';
 ---
 
-<BaseLayout>
+<BaseLayout title="Homepage">
   <Hero />
   <About />
   <Services />
