--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -1,10 +1,10 @@
 ---
 // Components
-import Button from '@components/ui/Button.astro';
+import Button from "@components/ui/Button.astro";
 
 // Content
-import { Image } from 'astro:assets';
-import living from '../../assets/images/nice-bedroom.jpg';
+import { Image } from "astro:assets";
+import living from "../../assets/images/nice-bedroom.jpg";
 ---
 
 <section
@@ -17,9 +17,9 @@ import living from '../../assets/images/nice-bedroom.jpg';
       </h1>
       <p
         class="mb-8 text-xl font-semibold text-black dark:text-stone-400 lg:text-2xl">
-        At Avalanche Hardwood Floors we focus on quality and trust. Give us a
-        call for a free, no pressure estimate to help get you pointed in the
-        right direction.
+        Avalanche Hardwood Floors we focus on quality and trust. Give us a call
+        for a free, no pressure estimate to help get you pointed in the right
+        direction.
       </p>
       <div
         class="mb-8 space-y-4 sm:flex-row sm:justify-center sm:space-x-4 sm:space-y-0 lg:mb-16">
@@ -27,7 +27,7 @@ import living from '../../assets/images/nice-bedroom.jpg';
           text="Get a quote"
           classes="btn-primary"
           href="/contact"
-          icon={{ name: 'tabler:arrow-right', side: 'right' }}
+          icon={{ name: "tabler:arrow-right", side: "right" }}
         />
         <Button text="View projects" classes="btn-secondary" href="/gallery" />
       </div>
