--- a/src/components/site/BaseHead.astro
+++ b/src/components/site/BaseHead.astro
@@ -3,7 +3,7 @@
 import "../../assets/tailwind.css";
 
 // Data
-import { SITE_TITLE, SITE_DEFAULT_IMAGE, ANALYTICS_GA4 } from "../../consts";
+import { SITE_DEFAULT_IMAGE, ANALYTICS_GA4, SITE_TITLE } from "../../consts";
 import GoogleAnalytics from "./GoogleAnalytics.astro";
 
 interface Props {
@@ -27,7 +27,8 @@ const { title, description } = Astro.props;
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title} | {SITE_TITLE}</title>
+{<title>{title} | {SITE_TITLE}</title>}
+
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
