fix(content): change homepage title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
 // Layout
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 // Components
-import Hero from '../components/content/HomeHero2.astro';
-import About from '../components/content/HomeAbout.astro';
-import Services from '../components/content/HomeServices2.astro';
-import CTA from '../components/ui/CallToAction.astro';
+import Hero from "../components/content/HomeHero2.astro";
+import About from "../components/content/HomeAbout.astro";
+import Services from "../components/content/HomeServices2.astro";
+import CTA from "../components/ui/CallToAction.astro";
 ---
 
-<BaseLayout title="Homepage">
+<BaseLayout title="Avalanche Hardwood Floors">
   <Hero />
   <About />
   <Services />
