refactor: use relative paths for all imports, set using tsconfig.json"

--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -1,27 +1,27 @@
 ---
 // Components
-import { Image } from 'astro:assets';
+import { Image } from "astro:assets";
 
 // Content
-// import repairC from '../../assets/images/repair-after.png';
-import addition1 from '../../assets/images/addition1.jpg';
-import bigLiving from '../../assets/images/big-living.jpg';
-import books1 from '../../assets/images/books-1.jpg';
-import books2 from '../../assets/images/books-2.jpg';
-import closeUp from '../../assets/images/close-up.jpg';
-import distressed from '../../assets/images/distressed-engineered.jpg';
-import kidsBed from '../../assets/images/kids-bed-wide.jpg';
-import kitchen1 from '../../assets/images/kitchen1.jpg';
-import loft1 from '../../assets/images/loft-1.jpg';
-import loft2 from '../../assets/images/loft-2.jpg';
-import medallion1a from '../../assets/images/medallion-1.jpg';
-import medallion2b from '../../assets/images/medallion-2b.jpg';
-import resand1 from '../../assets/images/resand1.jpg';
-import resand2 from '../../assets/images/resand2.jpg';
-import stairs1 from '../../assets/images/stairs-1.jpg';
-import stairs2 from '../../assets/images/stairs-prefinish.jpg';
-import stockKitchen from '../../assets/images/kitchen-1.jpg';
-import teak from '../../assets/images/teak.jpg';
+// import repairC from '@assets/images/repair-after.png';
+import addition1 from "@assets/images/addition1.jpg";
+import bigLiving from "@assets/images/big-living.jpg";
+import books1 from "@assets/images/books-1.jpg";
+import books2 from "@assets/images/books-2.jpg";
+import closeUp from "@assets/images/close-up.jpg";
+import distressed from "@assets/images/distressed-engineered.jpg";
+import kidsBed from "@assets/images/kids-bed-wide.jpg";
+import kitchen1 from "@assets/images/kitchen1.jpg";
+import loft1 from "@assets/images/loft-1.jpg";
+import loft2 from "@assets/images/loft-2.jpg";
+import medallion1a from "@assets/images/medallion-1.jpg";
+import medallion2b from "@assets/images/medallion-2b.jpg";
+import resand1 from "@assets/images/resand1.jpg";
+import resand2 from "@assets/images/resand2.jpg";
+import stairs1 from "@assets/images/stairs-1.jpg";
+import stairs2 from "@assets/images/stairs-prefinish.jpg";
+import stockKitchen from "@assets/images/kitchen-1.jpg";
+import teak from "@assets/images/teak.jpg";
 ---
 
 <div class="mt-16 columns-1 gap-4 sm:columns-2 md:columns-3">
