--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -1,9 +1,9 @@
 ---
 // Data
-import { SITE_TITLE, SITE_UTM_SOURCE } from '../../consts';
+import { SITE_TITLE, SITE_UTM_SOURCE } from "@src/consts";
 
 // Content
-import logo from '../../assets/images/logo-white.svg';
+import logo from "@assets/images/logo-white.svg";
 const today = new Date();
 ---
 
