--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -1,7 +1,7 @@
 ---
 // Components
-import DarkModeToggle from '../../components/ui/DarkModeToggle.astro';
-import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
+import DarkModeToggle from "@components/ui/DarkModeToggle.astro";
+import { SITE_PHONE, SITE_PHONE_HREF } from "src/consts";
 ---
 
 <div class="container mx-auto px-5 py-3">
