--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,14 @@
 ---
 // Layout
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "@layouts/BaseLayout.astro";
 
 // Components
-import CTA from '../components/ui/CallToAction.astro';
+import CTA from "@components/ui/CallToAction.astro";
 ---
 
-<BaseLayout>
+<BaseLayout title="About us">
   <article
-    class="container prose prose-base prose-stone mx-auto lg:prose-xl *:dark:text-white"
-  >
+    class="container prose prose-base prose-stone mx-auto lg:prose-xl *:dark:text-white">
     <h1>About Avalanche Hardwood Floors</h1>
     <p>
       Where quality meets craftsmanship in the heart of Colorado Springs. For
