--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,13 @@
 ---
 // Layout
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "@layouts/BaseLayout.astro";
 
 // Content
-import About from '../components/content/HomeAbout.astro';
-import Form from '../components/ui/Form.astro';
+import About from "@components/content/HomeAbout.astro";
+import Form from "@components/ui/Form.astro";
 ---
 
-<BaseLayout>
+<BaseLayout title="Contact Us">
   <Form />
   <About />
 </BaseLayout>
