--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,16 +1,16 @@
 ---
-import Button from '@components/ui/Button.astro';
-import BaseLayout from '../layouts/BaseLayout.astro';
-import { Icon } from 'astro-icon/components';
-import { Image } from 'astro:assets';
+import Button from "@components/ui/Button.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import { Icon } from "astro-icon/components";
+import { Image } from "astro:assets";
 
 // Content
-import addition from '../assets/images/repair-1.jpg';
-import construction from '../assets/images/construction2.jpg';
-import newInstall from '../assets/images/installation.jpg';
-import repair from '../assets/images/repair-during.png';
-import stain from '../assets/images/staining2.jpeg';
-import medallion from '../assets/images/medallion-2a.jpg';
+import addition from "@assets/images/repair-1.jpg";
+import construction from "@assets/images/construction2.jpg";
+import newInstall from "@assets/images/installation.jpg";
+import repair from "@assets/images/repair-during.png";
+import stain from "@assets/images/staining2.jpeg";
+import medallion from "@assets/images/medallion-2a.jpg";
 ---
 
 <BaseLayout>
@@ -34,7 +34,7 @@ import medallion from '../assets/images/medallion-2a.jpg';
           text="Get a quote"
           classes="btn-primary"
           href="/contact"
-          icon={{ name: 'tabler:arrow-right', side: 'right' }}
+          icon={{ name: "tabler:arrow-right", side: "right" }}
         />
       </div>
     </div>
