--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -4,7 +4,7 @@ import Button from "@components/ui/Button.astro";
 
 // Content
 import { Image } from "astro:assets";
-import living from "../../assets/images/nice-bedroom.jpg";
+import living from "@assets/images/nice-bedroom.jpg";
 ---
 
 <section
