--- a/src/components/content/HomeServices.astro
+++ b/src/components/content/HomeServices.astro
@@ -1,141 +1,233 @@
 ---
-import { Icon } from 'astro-icon/components';
+import { Icon } from "astro-icon/components";
 ---
-<section id="secondary-features" aria-label="Features for simplifying everyday business tasks" class="pb-14 pt-20 sm:pb-20 sm:pt-32 lg:pb-32">
+
+<section
+  id="secondary-features"
+  aria-label="Features for simplifying everyday business tasks"
+  class="pb-14 pt-20 sm:pb-20 sm:pt-32 lg:pb-32">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="mx-auto max-w-2xl md:text-center">
-      <h2 class="font-display text-3xl tracking-tight text-slate-900 dark:text-white sm:text-4xl">Our Services</h2>
-<p class="mt-4 text-lg tracking-tight text-slate-700 dark:text-stone-200">Because you’d probably be a little confused if we suggested you complicate your everyday business tasks instead.
-</p>
-</div>
-<div class="-mx-4 mt-20 flex flex-col gap-y-10 overflow-hidden px-4 sm:-mx-6 sm:px-6 lg:hidden">
-<div>
-<div class="mx-auto max-w-2xl">
-<h3 class="mt-6 text-sm font-medium text-blue-600 dark:text-white ">Reporting
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Stay on top of things with always up-to-date reporting features.
-</p>
-<p class="mt-4 text-sm text-slate-600">We talked about reporting in the section above but we needed three items here, so mentioning it one more time for posterity.
-</p>
-</div>
-<div class="relative mt-10 pb-10">
-<div class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
-</div>
-<div class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
-</div>
-</div>
-</div>
-<div>
-<div class="mx-auto max-w-2xl">
-<div class="w-9 rounded-lg bg-blue-600">
-<svg aria-hidden="true" class="h-9 w-9" fill="none">
-<path opacity=".5" d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-<path opacity=".3" d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-<path d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-</svg>
-</div>
-<h3 class="mt-6 text-sm font-medium text-blue-600">Inventory
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Never lose track of what’s in stock with accurate inventory tracking.
-</p>
-<p class="mt-4 text-sm text-slate-600">We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.
-</p>
-</div>
-<div class="relative mt-10 pb-10">
-<div class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
-</div>
-<div class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
-
-</div>
-</div>
-</div>
-<div>
-<div class="mx-auto max-w-2xl">
-<div class="w-9 rounded-lg bg-blue-600">
-<svg aria-hidden="true" class="h-9 w-9" fill="none">
-<path opacity=".5" d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z" fill="#fff">
-</path>
-<path d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z" fill="#fff">
-</path>
-</svg>
-</div>
-<h3 class="mt-6 text-sm font-medium text-blue-600">Contacts
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Organize all of your contacts, service providers, and invoices in one place.
-</p>
-<p class="mt-4 text-sm text-slate-600">This also isn’t actually a feature, it’s just some friendly advice. We definitely recommend that you do this, you’ll feel really organized and professional.
-</p>
-</div>
-<div class="relative mt-10 pb-10">
-<div class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
-</div>
-<div class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
-</div>
-</div>
-</div>
-</div>
-<div class="hidden lg:mt-20 lg:block">
-<div class="grid grid-cols-3 gap-x-8" role="tablist" aria-orientation="horizontal">
-<div class="relative">
-<div class="w-9 rounded-lg bg-blue-600">
-<Icon name="tabler:tools" class="fill-white h-9 w-9"/>
-</div>
-<h3 class="mt-6 text-sm font-medium text-blue-600">
-<button class="ui-not-focus-visible:outline-none" id="headlessui-tabs-tab-:Rirenla:" role="tab" type="button" aria-selected="true" tabindex="0" data-headlessui-state="selected" aria-controls="headlessui-tabs-panel-:Rbbenla:">
-<span class="absolute inset-0">
-</span>Reporting
-</button>
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Stay on top of things with always up-to-date reporting features.
-</p>
-<p class="mt-4 text-sm text-slate-600">We talked about reporting in the section above but we needed three items here, so mentioning it one more time for posterity.
-</p>
-</div>
-<div class="relative opacity-75 hover:opacity-100">
-<div class="w-9 rounded-lg bg-slate-500">
-<svg aria-hidden="true" class="h-9 w-9" fill="none">
-<path opacity=".5" d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-<path opacity=".3" d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-<path d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
-</path>
-</svg>
-</div>
-<h3 class="mt-6 text-sm font-medium text-slate-600">
-<button class="ui-not-focus-visible:outline-none" id="headlessui-tabs-tab-:Rkrenla:" role="tab" type="button" aria-selected="false" tabindex="-1" data-headlessui-state="" aria-controls="headlessui-tabs-panel-:Rjbenla:">
-<span class="absolute inset-0">
-</span>Inventory
-</button>
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Never lose track of what’s in stock with accurate inventory tracking.
-</p>
-<p class="mt-4 text-sm text-slate-600">We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.
-</p>
-</div>
-<div class="relative opacity-75 hover:opacity-100">
-<div class="w-9 rounded-lg bg-slate-500">
-<svg aria-hidden="true" class="h-9 w-9" fill="none">
-<path opacity=".5" d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z" fill="#fff">
-</path>
-<path d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z" fill="#fff">
-</path>
-</svg>
-</div>
-<h3 class="mt-6 text-sm font-medium text-slate-600">
-<button class="ui-not-focus-visible:outline-none" id="headlessui-tabs-tab-:Rmrenla:" role="tab" type="button" aria-selected="false" tabindex="-1" data-headlessui-state="" aria-controls="headlessui-tabs-panel-:Rrbenla:">
-<span class="absolute inset-0">
-</span>Contacts
-</button>
-</h3>
-<p class="mt-2 font-display text-xl text-slate-900">Organize all of your contacts, service providers, and invoices in one place.
-</p>
-<p class="mt-4 text-sm text-slate-600">This also isn’t actually a feature, it’s just some friendly advice. We definitely recommend that you do this, you’ll feel really organized and professional.
-</p>
-</div>
-</div>
-</div>
+      <h2
+        class="font-display text-3xl tracking-tight text-slate-900 dark:text-white sm:text-4xl">
+        Our Services
+      </h2>
+      <p class="mt-4 text-lg tracking-tight text-slate-700 dark:text-stone-200">
+        Because you’d probably be a little confused if we suggested you
+        complicate your everyday business tasks instead.
+      </p>
+    </div>
+    <div
+      class="-mx-4 mt-20 flex flex-col gap-y-10 overflow-hidden px-4 sm:-mx-6 sm:px-6 lg:hidden">
+      <div>
+        <div class="mx-auto max-w-2xl">
+          <h3 class="mt-6 text-sm font-medium text-blue-600 dark:text-white">
+            Reporting
+          </h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Stay on top of things with always up-to-date reporting features.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            We talked about reporting in the section above but we needed three
+            items here, so mentioning it one more time for posterity.
+          </p>
+        </div>
+        <div class="relative mt-10 pb-10">
+          <div
+            class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
+          </div>
+          <div
+            class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="mx-auto max-w-2xl">
+          <div class="w-9 rounded-lg bg-blue-600">
+            <svg aria-hidden="true" class="h-9 w-9" fill="none">
+              <path
+                opacity=".5"
+                d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+              <path
+                opacity=".3"
+                d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+              <path
+                d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+            </svg>
+          </div>
+          <h3 class="mt-6 text-sm font-medium text-blue-600">Inventory</h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Never lose track of what’s in stock with accurate inventory
+            tracking.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            We don’t offer this as part of our software but that statement is
+            inarguably true. Accurate inventory tracking would help you for
+            sure.
+          </p>
+        </div>
+        <div class="relative mt-10 pb-10">
+          <div
+            class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
+          </div>
+          <div
+            class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="mx-auto max-w-2xl">
+          <div class="w-9 rounded-lg bg-blue-600">
+            <svg aria-hidden="true" class="h-9 w-9" fill="none">
+              <path
+                opacity=".5"
+                d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z"
+                fill="#fff">
+              </path>
+              <path
+                d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z"
+                fill="#fff">
+              </path>
+            </svg>
+          </div>
+          <h3 class="mt-6 text-sm font-medium text-blue-600">Contacts</h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Organize all of your contacts, service providers, and invoices in
+            one place.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            This also isn’t actually a feature, it’s just some friendly advice.
+            We definitely recommend that you do this, you’ll feel really
+            organized and professional.
+          </p>
+        </div>
+        <div class="relative mt-10 pb-10">
+          <div
+            class="absolute -inset-x-4 bottom-0 top-8 bg-slate-200 sm:-inset-x-6">
+          </div>
+          <div
+            class="relative mx-auto w-[52.75rem] overflow-hidden rounded-xl bg-white shadow-lg shadow-slate-900/5 ring-1 ring-slate-500/10">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="hidden lg:mt-20 lg:block">
+      <div
+        class="grid grid-cols-3 gap-x-8"
+        role="tablist"
+        aria-orientation="horizontal">
+        <div class="relative">
+          <div class="w-9 rounded-lg bg-blue-600">
+            <Icon name="tabler:tools" class="h-9 w-9 fill-white" />
+          </div>
+          <h3 class="mt-6 text-sm font-medium text-blue-600">
+            <button
+              class="ui-not-focus-visible:outline-none"
+              id="headlessui-tabs-tab-:Rirenla:"
+              role="tab"
+              type="button"
+              aria-selected="true"
+              tabindex="0"
+              data-headlessui-state="selected"
+              aria-controls="headlessui-tabs-panel-:Rbbenla:">
+              <span class="absolute inset-0"> </span>Reporting
+            </button>
+          </h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Stay on top of things with always up-to-date reporting features.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            We talked about reporting in the section above but we needed three
+            items here, so mentioning it one more time for posterity.
+          </p>
+        </div>
+        <div class="relative opacity-75 hover:opacity-100">
+          <div class="w-9 rounded-lg bg-slate-500">
+            <svg aria-hidden="true" class="h-9 w-9" fill="none">
+              <path
+                opacity=".5"
+                d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+              <path
+                opacity=".3"
+                d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+              <path
+                d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                fill="#fff">
+              </path>
+            </svg>
+          </div>
+          <h3 class="mt-6 text-sm font-medium text-slate-600">
+            <button
+              class="ui-not-focus-visible:outline-none"
+              id="headlessui-tabs-tab-:Rkrenla:"
+              role="tab"
+              type="button"
+              aria-selected="false"
+              tabindex="-1"
+              data-headlessui-state=""
+              aria-controls="headlessui-tabs-panel-:Rjbenla:">
+              <span class="absolute inset-0"> </span>Inventory
+            </button>
+          </h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Never lose track of what’s in stock with accurate inventory
+            tracking.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            We don’t offer this as part of our software but that statement is
+            inarguably true. Accurate inventory tracking would help you for
+            sure.
+          </p>
+        </div>
+        <div class="relative opacity-75 hover:opacity-100">
+          <div class="w-9 rounded-lg bg-slate-500">
+            <svg aria-hidden="true" class="h-9 w-9" fill="none">
+              <path
+                opacity=".5"
+                d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z"
+                fill="#fff">
+              </path>
+              <path
+                d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z"
+                fill="#fff">
+              </path>
+            </svg>
+          </div>
+          <h3 class="mt-6 text-sm font-medium text-slate-600">
+            <button
+              class="ui-not-focus-visible:outline-none"
+              id="headlessui-tabs-tab-:Rmrenla:"
+              role="tab"
+              type="button"
+              aria-selected="false"
+              tabindex="-1"
+              data-headlessui-state=""
+              aria-controls="headlessui-tabs-panel-:Rrbenla:">
+              <span class="absolute inset-0"> </span>Contacts
+            </button>
+          </h3>
+          <p class="font-display mt-2 text-xl text-slate-900">
+            Organize all of your contacts, service providers, and invoices in
+            one place.
+          </p>
+          <p class="mt-4 text-sm text-slate-600">
+            This also isn’t actually a feature, it’s just some friendly advice.
+            We definitely recommend that you do this, you’ll feel really
+            organized and professional.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
