--- a/src/components/content/HomeServices2.astro
+++ b/src/components/content/HomeServices2.astro
@@ -1,15 +1,14 @@
 ---
 // Components
-import Button from '@components/ui/Button.astro';
-import { Icon } from 'astro-icon/components';
+import Button from "@components/ui/Button.astro";
+import { Icon } from "astro-icon/components";
 ---
 
 <section class="bg-white dark:bg-stone-900">
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:py-16 lg:px-6">
     <div class="mb-8 max-w-screen-md lg:mb-16">
       <h2
-        class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
-      >
+        class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white">
         Trusted services.
       </h2>
       <p class="text-stone-500 dark:text-stone-400 sm:text-xl">
@@ -24,12 +23,10 @@ import { Icon } from 'astro-icon/components';
       </p>
     </div>
     <div
-      class="space-y-8 max-sm:text-center md:grid md:grid-cols-2 md:gap-12 md:space-y-0 lg:grid-cols-3"
-    >
+      class="space-y-8 max-sm:text-center md:grid md:grid-cols-2 md:gap-12 md:space-y-0 lg:grid-cols-3">
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:axe"
             class="size-6 text-red-800 dark:text-red-300"
@@ -43,8 +40,7 @@ import { Icon } from 'astro-icon/components';
       </div>
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:paint"
             class="-ml-1 size-6 text-red-800 dark:text-red-300"
@@ -58,8 +54,7 @@ import { Icon } from 'astro-icon/components';
       </div>
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:bandage"
             class="size-6 text-red-800 dark:text-red-300"
@@ -73,8 +68,7 @@ import { Icon } from 'astro-icon/components';
       </div>
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:playlist-add"
             class="-ml-1 size-6 text-red-800 dark:text-red-300"
@@ -90,8 +84,7 @@ import { Icon } from 'astro-icon/components';
       </div>
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:home-plus"
             class="size-6 text-red-800 dark:text-red-300"
@@ -104,8 +97,7 @@ import { Icon } from 'astro-icon/components';
       </div>
       <div>
         <div
-          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-        >
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12">
           <Icon
             name="tabler:background"
             class="size-6 text-red-800 dark:text-red-300"
