--- a/src/components/site/BaseHead.astro
+++ b/src/components/site/BaseHead.astro
@@ -1,9 +1,9 @@
 ---
 // Built-in CSS styles.
-import "../../assets/tailwind.css";
+import "@assets/tailwind.css";
 
 // Data
-import { SITE_DEFAULT_IMAGE, ANALYTICS_GA4, SITE_TITLE } from "../../consts";
+import { SITE_DEFAULT_IMAGE, ANALYTICS_GA4, SITE_TITLE } from "@src/consts";
 import GoogleAnalytics from "./GoogleAnalytics.astro";
 
 interface Props {
@@ -27,7 +27,13 @@ const { title, description } = Astro.props;
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-{<title>{title} | {SITE_TITLE}</title>}
+{
+  (
+    <title>
+      {title} | {SITE_TITLE}
+    </title>
+  )
+}
 
 <meta name="title" content={title} />
 <meta name="description" content={description} />
@@ -50,7 +56,7 @@ const { title, description } = Astro.props;
 />
 
 <script is:inline>
-  // import '../../js/darkMode.js';
+  // import '@js/darkMode.js';
 
   const storageKey = "theme-preference";
 
