--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -1,26 +1,23 @@
 ---
 // Components
-import Button from '../../components/ui/Button.astro';
+import Button from "@components/ui/Button.astro";
 
 // Data
-import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
+import { SITE_PHONE, SITE_PHONE_HREF } from "src/consts";
 ---
 
 <div class="text-center">
   <section
-    class="relative z-10 mt-12 inline-block overflow-hidden rounded-3xl bg-yellow-400 bg-cover bg-blend-overlay shadow-xl max-lg:container dark:bg-red-950 dark:shadow-red-800/10 lg:-mb-20"
-  >
+    class="relative z-10 mt-12 inline-block overflow-hidden rounded-3xl bg-yellow-400 bg-cover bg-blend-overlay shadow-xl max-lg:container dark:bg-red-950 dark:shadow-red-800/10 lg:-mb-20">
     <div class="relative px-4 py-10 sm:py-16 lg:px-20">
       <div
         id="bg"
-        class="absolute inset-0 -left-10 top-auto z-0 stroke-yellow-300 dark:stroke-red-900"
-      >
+        class="absolute inset-0 -left-10 top-auto z-0 stroke-yellow-300 dark:stroke-red-900">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="w-screen max-sm:w-[150vw]"
           viewBox="0 0 1250 586"
-          fill="none"
-        >
+          fill="none">
           <g clip-path="url(#clip0_60_16439)">
             <path
               d="M19.43 557.924C305.587 377.185 514.434 675.231 739.877 448.31C863.127 324.252 903.348 62.5565 1233.19 30.0321"
@@ -32,13 +29,11 @@ import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
       </div>
       <div class="relative z-10 text-center">
         <h2
-          class="mb-10 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
-        >
+          class="mb-10 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white">
           Get a quote today for your project.
         </h2>
         <div
-          class="flex flex-col items-center justify-around gap-6 md:flex-row"
-        >
+          class="flex flex-col items-center justify-around gap-6 md:flex-row">
           <div>
             <h3>Call us</h3>
             <p>
@@ -53,7 +48,7 @@ import { SITE_PHONE, SITE_PHONE_HREF } from 'src/consts';
             text="Schedule your free estimate"
             style="white"
             href="/contact"
-            icon={{ name: 'tabler:arrow-right', side: 'right' }}
+            icon={{ name: "tabler:arrow-right", side: "right" }}
           />
         </div>
       </div>
