--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,12 +1,12 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/site/BaseHead.astro';
-import Header from '../components/site/Header.astro';
-import Footer from '../components/site/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
-import { ViewTransitions } from 'astro:transitions';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "@components/site/BaseHead.astro";
+import Header from "@components/site/Header.astro";
+import Footer from "@components/site/Footer.astro";
+import FormattedDate from "@components/FormattedDate.astro";
+import { ViewTransitions } from "astro:transitions";
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
