--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,16 +1,27 @@
 ---
 // Layout
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "@layouts/BaseLayout.astro";
 ---
-<BaseLayout>
-<section class="bg-white dark:bg-gray-900">
-    <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-        <div class="mx-auto max-w-screen-sm text-center">
-            <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600 dark:text-primary-500">404</h1>
-            <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">Wood if I could...</p>
-            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, we can't nail down the page you're looking for. While we sand out the rough spots, you'll find lots to explore on the home page.</p>
-            <a href="#" class="btn-primary">Back to Homepage</a>
-        </div>   
+
+<BaseLayout title="Page not found">
+  <section class="bg-white dark:bg-gray-900">
+    <div class="mx-auto max-w-screen-xl px-4 py-8 lg:px-6 lg:py-16">
+      <div class="mx-auto max-w-screen-sm text-center">
+        <h1
+          class="text-primary-600 dark:text-primary-500 mb-4 text-7xl font-extrabold tracking-tight lg:text-9xl">
+          404
+        </h1>
+        <p
+          class="mb-4 text-3xl font-bold tracking-tight text-gray-900 dark:text-white md:text-4xl">
+          Wood if I could...
+        </p>
+        <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">
+          Sorry, we can't nail down the page you're looking for. While we sand
+          out the rough spots, you'll find lots to explore on the home page.
+        </p>
+        <a href="#" class="btn-primary">Back to Homepage</a>
+      </div>
     </div>
-</section>
+  </section>
 </BaseLayout>
+
