--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -1,17 +1,31 @@
 ---
 // Layout
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "@layouts/BaseLayout.astro";
 ---
+
 <BaseLayout>
-<section class="bg-white dark:bg-gray-900">
-    <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-        <div class="mx-auto max-w-screen-sm text-center">
-            <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-7xl text-primary-600 dark:text-primary-500">Success!</h1>
-            <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl dark:text-white">We'll be in touch sooner than you think.</p>
-            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">If you need immediate help, give us a call.</p>
-            <p class="text-3xl mb-6 font-bold text-red-800 hover:text-red-500"><a href="tel:7194928134" title="Click or tap to call">(719) 492-8134</a></p>
-            <a href="#" class="btn-primary">Back to Homepage</a>
-        </div>   
+  <section class="bg-white dark:bg-gray-900">
+    <div class="mx-auto max-w-screen-xl px-4 py-8 lg:px-6 lg:py-16">
+      <div class="mx-auto max-w-screen-sm text-center">
+        <h1
+          class="text-primary-600 dark:text-primary-500 mb-4 text-7xl font-extrabold tracking-tight lg:text-7xl">
+          Success!
+        </h1>
+        <p
+          class="mb-4 text-3xl font-bold tracking-tight text-gray-900 dark:text-white md:text-4xl">
+          We'll be in touch sooner than you think.
+        </p>
+        <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">
+          If you need immediate help, give us a call.
+        </p>
+        <p class="mb-6 text-3xl font-bold text-red-800 hover:text-red-500">
+          <a href="tel:7194928134" title="Click or tap to call"
+            >(719) 492-8134</a
+          >
+        </p>
+        <a href="/" class="btn-primary">Back to Homepage</a>
+      </div>
     </div>
-</section>
+  </section>
 </BaseLayout>
+
