--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -37,6 +37,7 @@ import living from "@assets/images/nice-bedroom.jpg";
       alt="Colorado Srings hardwood floor"
       width="900"
       format="webp"
+      loading="eager"
       class="col-span-7 scale-125 rounded-3xl max-sm:mt-10 max-sm:scale-150 xl:translate-x-40"
     />
   </div>
