--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -30,6 +30,7 @@ import teak from "@assets/images/teak.jpg";
     alt="hardwood floor stairs"
     width="500"
     class="mb-4 rounded-lg"
+    loading="eager"
   />
   <Image
     src={addition1}
@@ -61,6 +62,7 @@ import teak from "@assets/images/teak.jpg";
     alt="Living room and kitchen with white oak floors"
     width="500"
     class="mb-4 rounded-lg"
+    loading="eager"
   />
   <Image
     src={medallion2b}
@@ -85,6 +87,7 @@ import teak from "@assets/images/teak.jpg";
     alt="Site finished white oak floors in living room"
     width="500"
     class="mb-4 rounded-lg"
+    loading="eager"
   />
   <Image
     src={medallion1a}
@@ -103,6 +106,7 @@ import teak from "@assets/images/teak.jpg";
     alt="Red oak floors in a hallway loft"
     width="500"
     class="mb-4 rounded-lg"
+    loading="eager"
   />
   <Image
     src={loft2}
