--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -85,7 +85,7 @@ const today = new Date();
     </span>
   </div>
 </footer>
-<p class="mb-3 text-center text-xs text-stone-500 dark:text-stone-500">
+<p class="mb-3 text-center text-xs text-stone-500 dark:text-zinc-400">
   Built from scratch with <svg
     xmlns="http://www.w3.org/2000/svg"
     width="1em"
@@ -110,6 +110,7 @@ const today = new Date();
   > by <a
     href=`https://newvistadigital.com/?utm_source=${SITE_UTM_SOURCE}`
     target="_blank"
-    class="underline transition-colors hover:text-black">New Vista Digital</a
+    class="underline transition-colors hover:text-black dark:hover:text-white"
+    >New Vista Digital</a
   >
 </p>
