--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -15,7 +15,7 @@ import medallion from "@assets/images/medallion-2a.jpg";
 
 <BaseLayout>
   <section
-    class="container mx-auto mb-12 rounded-2xl bg-stone-300 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-900">
+    class="container mx-auto mb-8 rounded-2xl bg-stone-300 bg-gradient-to-br from-stone-400 to-stone-700 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-900 lg:mb-10">
     <div
       class="mx-auto max-w-screen-xl px-4 py-10 text-center lg:px-20 lg:py-40">
       <h1
