Update main page title for SEO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@ import Services from "@components/content/HomeServices2.astro";
 import CTA from "@components/ui/CallToAction.astro";
 ---
 
-<BaseLayout title="Avalanche Hardwood Floors">
+<BaseLayout
+  title="Best Colorado Springs Hardwood Floor Company | Wood Floor Sanding & Refinishing">
   <Hero />
   <About />
   <Services />
