--- a/src/components/content/HomeAbout.astro
+++ b/src/components/content/HomeAbout.astro
@@ -1,13 +1,17 @@
 ---
-import Button from '@components/ui/Button.astro';
+import Button from "@components/ui/Button.astro";
 ---
 
 <section class="py-12 dark:bg-stone-950">
   <div class="container mx-auto my-20 px-10 sm:flex">
     <div class="sm:w-2/3">
-      <h2 class="text-xl font-extrabold">About us</h2>
-      <p class="mb-6 text-4xl font-bold">
-        We’ve been working in the industry for over 20 years.
+      <p class="text-xl font-extrabold">About us</p>
+      <h2 class="mb-6 text-4xl font-bold">
+        We’ve been working with hardwood floors since 1999.
+      </h2>
+      <p class="text-xl">
+        We've been trusted by luxury realtors and Parade of Homes owners to make
+        each home look and feel amazing.
       </p>
     </div>
     <div class="ml-auto">
