--- a/src/components/ui/CallToAction.astro
+++ b/src/components/ui/CallToAction.astro
@@ -47,7 +47,7 @@ import { SITE_PHONE, SITE_PHONE_HREF } from "src/consts";
           <Button
             text="Schedule your free estimate"
             style="white"
-            href="/contact"
+            href="/contact?utm_source=web-cta-block"
             icon={{ name: "tabler:arrow-right", side: "right" }}
           />
         </div>
