--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ import CTA from "@components/ui/CallToAction.astro";
 ---
 
 <BaseLayout
-  title="Best Colorado Springs Hardwood Floor Company | Wood Floor Sanding & Refinishing">
+  title="Best Colorado Springs Hardwood Floor Company | Wood Floor Sanding & Refinishing"
+  description="Over 20 years in business. The best hardwood flooring company in Colorado Springs. Quality, service, and warranty you can trust.">
   <Hero />
   <About />
   <Services />
