Change site to floor trade marketing

--- a/src/components/site/Footer.astro
+++ b/src/components/site/Footer.astro
@@ -108,8 +108,9 @@ const today = new Date();
         values="0;30;0;0;0;0;0;0;0"></animate></path
     ></svg
   > by <a
-    href=`https://newvistadigital.com/?utm_source=${SITE_UTM_SOURCE}`
+    href=`https://floortrademarketing.com/?utm_source=${SITE_UTM_SOURCE}`
     target="_blank"
-    class="underline transition-colors hover:text-black">New Vista Digital</a
+    class="underline transition-colors hover:text-black"
+    >Floor Trade Marketing</a
   >
 </p>
